<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>Gym_App</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>

    <dependencies>

        <!-- 🧩 JavaTuples: Utility library for easy tuple (Pair, Triplet, etc.) handling -->
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>1.2</version>
        </dependency>

        <!-- 🧩 JSON.org: Lightweight JSON parsing and creation (JSONObject, JSONArray) -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version> <!-- ✅ Updated to resolve CVEs -->
        </dependency>

        <!-- 🧩 MySQL Connector/J: JDBC driver for connecting Java apps to MySQL databases -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.3.0</version> <!-- ✅ fixes CVE-2024-7254 -->
        </dependency>

        <!-- 🗄️ H2 Database: Lightweight, embeddable SQL database for Java (JDBC-compatible, no external install required) -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.3.232</version> <!-- ✅ Latest stable -->
        </dependency>

        <!-- ⚡ HikariCP: High-performance JDBC connection pool -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version> <!-- ✅ Latest stable -->
        </dependency>

        <!-- 📦 Jackson Databind: JSON serialization/deserialization library -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version> <!-- ✅ Latest stable -->
        </dependency>

        <!-- 🧩 MyBatis: ORM (Object Relational Mapper) for database interaction using SQL mapping -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.5.16</version> <!-- ✅ Security and stability fixes -->
        </dependency>

        <!-- 🧩 Apache Commons Lang: Utility classes for String manipulation, object comparison, etc. -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version> <!-- ✅ latest stable, resolves CVE-2025-48924 -->
        </dependency>

        <!-- 🧩 Dotenv-Java: Loads environment variables from a .env file for secure configuration -->
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>3.2.0</version> <!-- ✅ use this version (latest published to Maven Central) -->
        </dependency>

        <!-- 🧩 JFreeChart: Library for creating charts and graphs (pie, bar, line, etc.) -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.4</version>
        </dependency>

        <!-- 🧩 JavaFX Controls: UI components (Buttons, Labels, Tables, etc.) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>25.0.1</version>
        </dependency>

        <!-- 🧩 JavaFX Swing Bridge: allows embedding FX inside Swing (JFXPanel) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>25.0.1</version>
        </dependency>

        <!-- 🧩 JavaFX FXML: Enables use of .fxml files for declarative UI layout -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>25.0.1</version>
        </dependency>

        <!-- 🧩 JavaFX Graphics: Core rendering and scene graph functionality -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>25.0.1</version>
        </dependency>

        <!-- 🧪 JUnit 5: Testing framework for unit tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <!-- 🎨 AtlantisFX Base: Modern JavaFX UI theme library providing styles, components, and utilities -->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- 🗄️ Flyway: Database migration tool for versioning and automating schema changes -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>10.11.0</version>
        </dependency>

        <!-- 🗄️ Flyway MySQL: Database migration support for MySQL using Flyway schema versioning -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
            <version>10.11.0</version>
        </dependency>

        <!-- 🗄️ SQLite JDBC: JDBC driver for connecting Java applications to SQLite databases -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.3.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- ✅ Compiler Plugin: ensures Maven uses Java 25 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>25</release>
                </configuration>
            </plugin>

            <!-- 🧩 JavaFX Maven Plugin: simplifies running and packaging JavaFX apps -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <!-- Main class for JavaFX application -->
                    <!--suppress UnresolvedMavenProperty -->
                    <mainClass>${mainClass}</mainClass>
                </configuration>
            </plugin>

            <!-- 🧩 Shade Plugin: bundles dependencies into one runnable JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version> <!-- ✅ Updated for Java 21+ support -->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>App_Code.Objects.Screens.Meal_Plan_Screen</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- 🧩 Versions Plugin: allows checking and updating dependency versions easily -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.2</version>
            </plugin>

        </plugins>
    </build>

</project>
